--- a/ПТЗИ/Лабораторная работа №3/from_recv/Makefile
+++ b/ПТЗИ/Лабораторная работа №3/from_recv/Makefile
@@ -1,4 +1,4 @@
-main : main.c  ./mqv/2_step/*.c ./salsa/*.c
-	gcc main.c ./mqv/2_step/gen_number.c ./mqv/2_step/get_data.c ./salsa/salsa20.c -o main -lgmp
+main : main.c  ./mqv/2_step/*.c ./rabbit/*.c
+	gcc main.c ./mqv/2_step/gen_number.c ./mqv/2_step/get_data.c ./rabbit/rabbit.c -o main -lgmp
 run:
 	./main
